--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
+
 {
-    "version":2,
-    "builds":[{
-       "src":"./server.js",
-       "use":"@vercel/node" 
-    }
-    ],
-    "routes":[{
-        "src":"/(.*)",
-        "dest":"/"
-    }]
-}
+    "version": 2,
+    "name": "native-server",
+    "builds": [{ "src": "server.js", "use": "@vercel/node" }],
+    "routes": [{ "src": "/(.*)", "dest": "/server.js" }]
+  }
