--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "main": "index.js",
   "engines":{
-    "node":"18.x"
+    "node":"16.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
